fixed banner btn styles, instruction section flex spacing

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -40,7 +40,7 @@
 	&__location, &__link {
 		color: $highlight;
 		font-weight: 400;
-		font-size: .8em;
+		font-size: 1em;
 
 		@media screen and (min-width: $xs) {
 			font-size: 1em;
@@ -54,7 +54,7 @@
 	&__link {
 		text-align: right;
 		display: table;
-		padding: .2em 0;
+		padding: .5em 0 0 0;
 		
 		button {
 			display: table-cell;
