--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -27,11 +27,11 @@
 	padding-top: 2em;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	align-content: center;
 	height: 90%;
 	max-height: 668px;
-}
+} 
 
 .intro__innerWrapper__topper {
 	padding: 0 2em;
